mtls.yaml
apiVersion: templates.gatekeeper.sh/v1beta1
kind: ConstraintTemplate
metadata:
  name: l5dmtls
spec:
  crd:
    spec:
      names:
        kind: L5dmTLS
        listKind: L5dmTLSList
        plural: l5dmtls
        singular: l5dmtls
      validation:
        openAPIV3Schema:
          properties:
            labels:
              type: array
              items: string
  targets:
  - target: admission.k8s.gatekeeper.sh
    rego: |
      package linkerd.io

      import input.review.object.spec

      violation[{"msg":msg, "details":{}}] {
        not injected
        msg := sprint("The workload must be injected with the Linkerd proxy")
      }

      injected {
        input.review.object.spec.containers[_] == "linkerd-proxy"
      }
