template.yaml
apiVersion: templates.gatekeeper.sh/v1beta1
kind: ConstraintTemplate
metadata:
  name: linkerdmutualtls
  labels:
    policy.linkerd.io: mtls
spec:
  crd:
    spec:
      names:
        kind: LinkerdMutualTLS
        plural: mtls
        singular: mtls
        shortNames: ["mtls"]
      validation:
        openAPIV3Schema:
          properties:
            labels:
              type: array
              items: string
  targets:
  - target: admission.k8s.gatekeeper.sh
    rego: |
      package linkerd.io

      violation[{"msg":msg, "details":{}}] {
        containers := input.review.object.spec.containers
        parameters := input.parameters

        proxy := { proxy |
          containers[i].name == parameters.proxy.name
          proxy := containers[i]
        }
        count(proxy) == 0
        msg := sprintf("Missing proxy sidecar container: %v", [parameters.proxy.name])
      }

      violation[{"msg":msg, "details":{}}] {
        containers := input.review.object.spec.containers
        parameters := input.parameters

        env := { variable |
          containers[i].name == parameters.proxy.name
          proxy := containers[i]

          parameters.env[j].name == proxy.env[k].name
          variable := parameters.env[j].name
        }
        count(env) == 0
        msg := sprintf("Missing required environment variable: %v", [parameters.env[j].name])
      }

      violation[{"msg":msg, "details":{}}] {
        input.review.object.spec.automountServiceAccountToken != true
        msg := "automountServiceAccountToken must be set to 'true' to enable mTLS identity"
      }
